hello2/service.yml
kind: Service
apiVersion: v1
metadata:
  name: "hello2"
spec:
  selector:
    app: "hello2"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
  type: "ClusterIP"
